unpackaged/objects/AffiliatedCompany__c.object
<CustomObject>
    <fields>
        <fullName>AffiliatedCompanyCd__c</fullName>
        <displayFormat>G{000}</displayFormat>
        <externalId>true</externalId>
        <label>営業グループコード</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AffiliatedCompanyNameEng__c</fullName>
        <label>営業グループ名称（英語）</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffiliatedCompanyNameKana__c</fullName>
        <label>営業グループ名称（カナ）</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.Name</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipName>R00N10000000uqmREAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <label>営業グループ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AffiliatedCompanyCd__c</columns>
        <columns>NAME</columns>
        <columns>AffiliatedCompanyNameEng__c</columns>
        <columns>EigyoTanto__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>営業グループ名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>